--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
                         GENERAL
 ----------------------------------------------------------*/
 h1,
-h2 {
+h2,
+h3 {
   font-family: "Source Code Pro", monospace;
   text-align: center;
   text-transform: uppercase;
@@ -19,6 +20,15 @@ h1 {
 h2 {
   font-size: 4rem;
   margin-top: 0;
+}
+
+h3 {
+  font-size: 3rem;
+  margin: 0;
+}
+
+p {
+  font-size: 1.2rem;
 }
 
 main a {
@@ -49,6 +59,7 @@ html body {
   color: white;
   height: 100%;
   /* ------------------- NAV -----------------------------*/
+  /* ------------------- MODALS ---------------------------*/
   /* ------------------- FOOTER ---------------------------*/
 }
 
@@ -66,6 +77,7 @@ html body nav {
   top: 0;
   right: 0;
   left: 0;
+  z-index: 1000;
 }
 
 html body nav img {
@@ -117,6 +129,7 @@ html body main {
   /* ------------------- HOME -----------------------------*/
   /* ------------------- PRESENTATION ---------------------*/
   /* ------------------- SKILLS ---------------------------*/
+  /* ------------------ PROJECTS --------------------------*/
   /* ------------------- VALUES ---------------------------*/
 }
 
@@ -160,7 +173,7 @@ html body main #home a {
 }
 
 html body main #presentation {
-  background-color: #464646;
+  background-color: #333333;
   color: white;
 }
 
@@ -224,7 +237,7 @@ html body main #skills {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #323232;
+  background-color: #464646;
 }
 
 html body main #skills div {
@@ -248,6 +261,7 @@ html body main #skills div #selection {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 0;
 }
 
 html body main #skills div #selection li {
@@ -280,9 +294,8 @@ html body main #skills div #selection li:hover {
 }
 
 html body main #skills div article {
-  border-radius: 1rem;
-  margin: 0;
   display: none;
+  background-color: #333333;
 }
 
 html body main #skills div article ul {
@@ -293,7 +306,8 @@ html body main #skills div article ul {
       justify-content: space-around;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: 1rem;
+  margin-top: 0;
+  padding: 2rem;
 }
 
 html body main #skills div article ul li {
@@ -334,9 +348,110 @@ html body main #skills div .lign {
   display: flex;
 }
 
+html body main #projects {
+  background-color: #333333;
+}
+
+html body main #projects #projects_carousel .carousel {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  overflow: hidden;
+}
+
+html body main #projects #projects_carousel .carousel article {
+  background-color: #464646;
+  margin-bottom: 3rem;
+  -webkit-transition: opacity .5s, z-index .5s, -webkit-transform .5s;
+  transition: opacity .5s, z-index .5s, -webkit-transform .5s;
+  transition: transform .5s, opacity .5s, z-index .5s;
+  transition: transform .5s, opacity .5s, z-index .5s, -webkit-transform .5s;
+  width: 80%;
+  height: 60vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 1rem;
+}
+
+html body main #projects #projects_carousel .carousel article img {
+  max-width: 100%;
+  max-height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+html body main #projects #projects_carousel .carousel .prev,
+html body main #projects #projects_carousel .carousel .next {
+  position: absolute;
+  opacity: 0;
+}
+
+html body main #projects #projects_carousel .carousel .prev {
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+}
+
+html body main #projects #projects_carousel .carousel .next {
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+html body main #projects #projects_carousel .carousel .active {
+  opacity: 1;
+  cursor: pointer;
+  position: relative;
+  z-index: 900;
+}
+
+html body main #projects #projects_carousel .carousel #carousel_button_next,
+html body main #projects #projects_carousel .carousel #carousel_button_prev {
+  margin-right: 0;
+  margin-left: 0;
+  position: relative;
+  top: 50%;
+  width: 3rem;
+  height: 3rem;
+  background-color: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 901;
+}
+
+html body main #projects #projects_carousel .carousel #carousel_button_prev::after,
+html body main #projects #projects_carousel .carousel #carousel_button_next::after {
+  content: " ";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 50%;
+  left: 54%;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  -webkit-transform: translate(-50%, -50%) rotate(135deg);
+          transform: translate(-50%, -50%) rotate(135deg);
+}
+
+html body main #projects #projects_carousel .carousel #carousel_button_next::after {
+  left: 47%;
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+          transform: translate(-50%, -50%) rotate(-45deg);
+}
+
 html body main #values {
   background-color: #464646;
-  height: calc(100vh - 2* $nav-height);
 }
 
 html body main #values div ul {
@@ -351,7 +466,8 @@ html body main #values div ul {
 }
 
 html body main #values div ul li {
-  background-color: #353535;
+  background-color: #333333;
+  color: white;
   padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -377,29 +493,30 @@ html body main #values div ul li img {
 }
 
 html body main #values div ul li:hover {
-  background-color: black;
+  background-color: #680c3d;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
-html body main #values article {
-  z-index: 1;
-  display: none;
-  position: fixed;
-  background-color: rgba(255, 255, 255, 0.6);
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  padding: 0 2rem;
+html body .modal_projects {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 2rem;
 }
 
-html body main #values article div {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+html body .modal_projects .illustration {
+  width: 45%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+html body .modal_projects div {
+  width: 48%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -407,24 +524,49 @@ html body main #values article div {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #353535;
-  padding: 3rem;
-}
-
-html body main #values article div h3 {
-  font-size: 3.5rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0;
 }
 
-html body main #values article div img {
-  width: 50%;
-  margin: 3rem;
+html body .modal_projects div p {
+  margin: 0;
 }
 
-html body main #values article div p {
+html body .modal_projects div ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+html body .modal_projects div ul li {
+  margin-right: 1rem;
+}
+
+html body .modal_values {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 2rem;
+}
+
+html body .modal_values img {
+  width: 32%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0;
+}
+
+html body .modal_values p {
+  width: 65%;
   margin: 0;
 }
 
@@ -486,15 +628,19 @@ html body footer ul li img {
   transition: 0.5s;
 }
 
+.btn img {
+  max-height: 2rem;
+}
+
 .btn:hover {
-  background-color: black;
+  background-color: #680c3d;
   color: white;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
 .btnSelected {
-  background-color: #555;
+  background-color: #333333;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
@@ -503,6 +649,46 @@ html body footer ul li img {
   background-color: #32b6ce;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+}
+
+.modalBackground {
+  z-index: 1001;
+  display: none;
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.6);
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0 2rem;
+}
+
+.modalBackgroundDisplay {
+  display: block;
+}
+
+.modal {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  width: 1060px;
+  max-height: calc(100vh - 4rem);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #333333;
+  padding: 3rem;
+}
+
+.modalDisplay {
+  display: block;
 }
 
 /* ----------------------------------------------------------
@@ -628,6 +814,50 @@ html body footer ul li img {
   html body main #values article div img {
     width: 100%;
   }
+  html .modal {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  html .modal .modal_projects {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  html .modal .modal_projects .illustration {
+    margin-bottom: 2rem;
+    width: 60%;
+    max-height: 40vh;
+  }
+  html .modal .modal_projects div {
+    width: 100%;
+  }
+  html .modal .modal_projects div ul {
+    margin-top: 2rem;
+    width: 100%;
+  }
+  html .modal .modal_values {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  html .modal .modal_values img {
+    margin-bottom: 2rem;
+    width: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  html .modal .modal_values p {
+    width: 100%;
+  }
   .btn {
     padding: 0.7rem;
     min-width: unset;
@@ -638,6 +868,9 @@ html body footer ul li img {
   html body main #home {
     -ms-grid-rows: 45% 25% 20% auto;
         grid-template-rows: 45% 25% 20% auto;
+  }
+  html body .modal {
+    width: calc(100vw - 4rem);
   }
   h1 {
     font-size: 5rem;
